crates/knok/tests/ui/mlir_model_signature_mismatch.stderr
error: mlir_model inputs do not match MLIR function `imported.add4`: declared [TensorType { elem: F32, shape: [5] }, TensorType { elem: F32, shape: [4] }], MLIR has [TensorType { elem: F32, shape: [4] }, TensorType { elem: F32, shape: [4] }]
 --> tests/ui/mlir_model_signature_mismatch.rs:1:1
  |
1 | / knok::mlir_model! {
2 | |     name: imported_add4,
3 | |     path: "../../../../crates/knok/tests/fixtures/add4.mlir",
4 | |     backend: "llvm-cpu",
... |
7 | |     output: knok::tensor::Tensor1<f32, 4>,
8 | | }
  | |_^
  |
  = note: this error originates in the macro `knok::mlir_model` (in Nightly builds, run with -Z macro-backtrace for more info)
